2001-08-08 Wednesday 19:49  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.28), autogen.sh (1.4), configure.ac (1.1): Add
	result checking in autogen.sh. Add configure.ac for autoconf 2.50+.

2001-08-08 Wednesday 19:39  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.27), configure.in (1.13), include/thai/Makefile.am
	(1.5), include/thai/thcell.h (1.1), include/thai/thrend.h (1.6),
	src/Makefile.am (1.10), src/thcell/.cvsignore (1.1),
	src/thcell/Makefile.am (1.1), src/thcell/thcell.c (1.1),
	src/thrend/thrend.c (1.5): Split thcell functions into a separate
	module.

2001-08-08 Wednesday 11:45  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.26), src/thrend/thrend.c (1.4): Add guards for cells
	without base or hilo char.

2001-08-07 Tuesday 19:43  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.25), src/thinp/thinp.c (1.4): Remove uncommon
	predefined sequence correction.

2001-08-07 Tuesday 19:40  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.24), include/thai/thrend.h (1.5), include/thai/tis.h
	(1.2), src/thrend/thrend.c (1.3): Fix NULL redefinition in tis.h.
	Change rendering function API to return total glyphs. Implement
	Win/Mac shaping. Implement string rendering functions.

2001-08-07 Tuesday 17:29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.23), include/thai/thrend.h (1.4),
	src/thrend/thrend.c (1.2): Treat SARA_AM cases. Add is_decomp_am
	argument to determine its appearance.  Redefine WTT "cell" for
	decomposed SARA_AM case. Add code for plain TIS rendering with
	SARA_AM concerned.

2001-08-07 Tuesday 16:12  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.22), include/thai/thctype.h (1.7),
	src/thctype/thctype.c (1.7), tests/test_thctype.c (1.2): Add
	consonant shapes classification in thctype, for the use of elegant
	renderers.

2001-08-06 Monday 21:08  Theppitak Karoonboonyanan  <thep@linux.thai.net>
